Added the necessary dependencies in order to import the libraries

--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,10 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- http-conduit
+- sqlite-simple
+- bytestring
+- aeson
 
 ghc-options:
 - -Wall
