--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -25,7 +25,10 @@ source-repository head
 
 library
   exposed-modules:
+      Fetch
       Lib
+      Parse
+      Types
   other-modules:
       Paths_haskell_project
   autogen-modules:
@@ -34,7 +37,11 @@ library
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
+    , http-conduit
+    , sqlite-simple
   default-language: Haskell2010
 
 executable haskell-project-exe
@@ -47,8 +54,12 @@ executable haskell-project-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
     , haskell-project
+    , http-conduit
+    , sqlite-simple
   default-language: Haskell2010
 
 test-suite haskell-project-test
@@ -62,6 +73,10 @@ test-suite haskell-project-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
     , haskell-project
+    , http-conduit
+    , sqlite-simple
   default-language: Haskell2010
