--- a/haskell-project.cabal
+++ b/haskell-project.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Database
       Fetch
       Lib
       Parse
@@ -42,6 +43,7 @@ library
     , bytestring
     , http-conduit
     , sqlite-simple
+    , text
   default-language: Haskell2010
 
 executable haskell-project-exe
@@ -60,6 +62,7 @@ executable haskell-project-exe
     , haskell-project
     , http-conduit
     , sqlite-simple
+    , text
   default-language: Haskell2010
 
 test-suite haskell-project-test
@@ -79,4 +82,5 @@ test-suite haskell-project-test
     , haskell-project
     , http-conduit
     , sqlite-simple
+    , text
   default-language: Haskell2010
